tests/snapshots/ui__ui_test_err_missing_files-2.snap
---
source: tests/ui.rs
expression: "run_ouch(\"ouch decompress a b\", dir)"
---
[ERROR] failed to canonicalize path `a`: [OS_ERROR]
 - File not found
