tests/snapshots/ui__ui_test_err_missing_files-3.snap
---
source: tests/ui.rs
expression: "run_ouch(\"ouch list a b\", dir)"
---
[ERROR] failed to canonicalize path `a`: [OS_ERROR]
 - File not found
