tests/snapshots/ui__ui_test_err_missing_files.snap
---
source: tests/ui.rs
expression: "run_ouch(\"ouch compress a b\", dir)"
---
[ERROR] failed to canonicalize path `a`: [OS_ERROR]
 - File not found
