tests/snapshots/ui__ui_test_ok_compress-2.snap
---
source: tests/ui.rs
expression: "run_ouch(\"ouch compress input output.gz\", dir)"
---
[INFO] Successfully compressed 'output.gz'
