tests/snapshots/ui__ui_test_ok_compress.snap
---
source: tests/ui.rs
expression: "run_ouch(\"ouch compress input output.zip\", dir)"
---
[INFO] Compressing 'input'
[INFO] Successfully compressed 'output.zip'
